--- a/index.html
+++ b/index.html
@@ -18,41 +18,47 @@
             <h4><span class="title">Commercial Projects:</span></h4>
             <ol>
                <li>
-                  <a class="webLink" href="https://taro-kliuchsveta.com/" target="_blank"
-                     >Taro Esoteric course <img src="dist/assets/2990159.png" alt="link"
+                  <a class="webLink" href="https://taro-kliuchsveta.com/riderwaite" target="_blank"
+                     >Tarot Rider Waite <img src="dist/assets/2990159.png" alt="link"
                   /></a>
-                  <span>.... [ HTML/CSS, Vite, JavaScript, Material Design]</span>
+                  <span>.... [ Next.js, React, Bootstrap, SASS, Typescript, Eslint ]</span>
                </li>
                <li>
                   <a class="webLink" href="https://argo-e.com.ua/" target="_blank"
-                     >HVAC Services <img src="dist/assets/2990159.png" alt="link"
+                  >HVAC Services <img src="dist/assets/2990159.png" alt="link"
                   /></a>
-                  <span>.... [ HTML, CSS-animation, JavaScript, SwiperJS]</span>
+                  <span>.... [ HTML, CSS-animation, JavaScript, SwiperJS ]</span>
+               </li>
+               <li>
+                  <a class="webLink" href="https://taro-kliuchsveta.com/" target="_blank"
+                     >Tarot Online-Intensive <img src="dist/assets/2990159.png" alt="link"
+                  /></a>
+                  <span>.... [ HTML/CSS, Vite, JavaScript, Material Design ]</span>
                </li>
                <li>
                   <a class="webLink" href="https://revizoravto.com.ua/" target="_blank"
                      >CAR selection Services <img src="dist/assets/2990159.png" alt="link"
                   /></a>
-                  <span>.... [ JavaScript, HTML, CSS, WordPress]</span>
+                  <span>.... [ JavaScript, HTML, CSS, WordPress ]</span>
                </li>
             </ol>
 
             <br />
             <hr />
             <!--  -->
-            <h4><span class="title">Other Apps (FrontEnd / FullStack)</span>:</h4>
-            <ol>
+            <h4><span class="title">PET-projects and Test-tasks</span>:</h4>
+            <ol start="5">
                <li>
                   <a class="webLink" href="https://master--beautiful-cassata-3d99f8.netlify.app/" target="_blank"
                      >Movie app <img src="dist/assets/2990159.png" alt="link"
                   /></a>
-                  <span>...... [ REST API, JSON, TMDB API, JavaScript, Typescript, Vite]</span>
+                  <span>...... [ REST API, JSON, TMDB API, JavaScript, Typescript, Vite ]</span>
                </li>
                <li>
                   <a class="webLink" href="https://master--bookings-react.netlify.app/" target="_blank"
                      >Booking Travel App <img src="dist/assets/2990159.png" alt="link"
                   /></a>
-                  <span>...... [ Redux Toolkit with AsyncThunk, React, Typescript, REST API ]</span>
+                  <span>...... [ React, Typescript, Redux with AsyncThunk, REST API ]</span>
                </li>
                <li>
                   <a class="webLink" href="https://mongo-react-app.vercel.app/" target="_blank"
@@ -65,7 +71,7 @@
                      >Full-Stack Todo List <img src="dist/assets/2990159.png" alt="link"
                   /></a>
                   <span
-                     >... [ Node, Express, PostgreSQL, JWT, Passport, JOI, Nodemailer, React+Typescript, Zuztand, Prisma
+                     >... [ Express, PostgreSQL, JWT, JOI, Nodemailer, React, Typescript, Zuztand, Prisma
                      ORM ]</span
                   >
                </li>
@@ -76,27 +82,27 @@
             <!--  -->
 
             <h4><span class="title">Landing Pages</span>:</h4>
-            <ol>
+            <ol start="9">
                <li>
                   <a class="webLink" href="https://cat-landing.netlify.app/" target="_blank"
                      >Catadamy <img src="dist/assets/2990159.png" alt="link"
                   /></a>
                </li>
-               <li>
+               <!-- <li>
                   <a class="webLink" href="https://hustle2live.github.io/Landings/cinema" target="_blank"
                      >IPTV Services (mobile only) <img src="dist/assets/2990159.png" alt="link"
                   /></a>
-               </li>
+               </li> -->
                <li>
                   <a class="webLink" href="https://hustle2live.github.io/Landings/accounting" target="_blank"
                      >Accounting <img src="dist/assets/2990159.png" alt="link"
                   /></a>
                </li>
-               <li>
+               <!-- <li>
                   <a class="webLink" href="https://hustle2live.github.io/Landings/space" target="_blank"
                      >Space Research center <img src="dist/assets/2990159.png" alt="link"
                   /></a>
-               </li>
+               </li> -->
             </ol>
 
             <h4 class="title">Get in touch with me:</h4>
@@ -132,7 +138,7 @@
                <img class="btn-responce desktop" src="dist/assets/desktop-svgrepo-com.svg" alt="desktop" />
                <img class="btn-responce mobile active" src="dist/assets/mobile-alt-1-svgrepo-com.svg" alt="mobile" />
             </div>
-            <iframe title="preview wrapper" class="mobile" src="https://cat-landing.netlify.app/"></iframe>
+            <iframe title="preview wrapper" class="mobile" src="https://master--beautiful-cassata-3d99f8.netlify.app/"></iframe>
          </div>
       </div>
    </body>
